fixes new flashcard form alignment

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ label {
   padding: 5px;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
+  margin: 0 auto;
 }
 
 .flashcard-container {
